@@ -1,5 +1,17 @@
 2007-12-21  Emmanuele Bassi  <ebassi@openedhand.com>
 
+	* clutter/clutter-group.c:
+	* clutter/clutter-group.h: Add the clutter_group_add() convenience
+	function; it's now "undeprecated" and implemented as a macro
+
+	* clutter/clutter-stage.h: Add clutter_stage_add() as a convenience
+	macro
+
+	* clutter/cogl/cogl.h: Include just the needed headers instead
+	of the whole clutter.h; this avoids rebuild cogl when not needed
+
+2007-12-21  Emmanuele Bassi  <ebassi@openedhand.com>
+
 	* Makefile.am: Move tests build before docs, to cut down the
 	distcheck failure discovery
 
